# Cigarette-and-Drinking-Data

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev   LICENSE  Makefile  README.md  Updated Cigarette & Drinking Data.csv  bootstrap_addiction_repo.sh  bootstrap_repo.sh  docker-compose.dev.yml  docker-compose.yml  environment.yml  pyproject.toml  pyproject.toml.bak  requirements.txt
.github/workflows/: ci.yaml  ci.yml
Data Cleaning/: Cigarettes & Drinking Data Cleaning.ipynb
Data Cleaning/.ipynb_checkpoints/: Cigarettes & Drinking Data Cleaning-checkpoint.ipynb
Machine Learning/: Machine Learning Model.ipynb
addiction/: __init__.py  config.py  dataset.py  eval.py  features.py  model.py  plots.py  preprocessor.py
addiction/modeling/: __init__.py  predict.py  train.py
addition/: __init__.py  dataset.py  features.py  plots.py
addition/modeling/: predict.py  train.py
artifacts/rf/: feature_importances.csv  metrics.json  model.joblib
config/: config.yaml  schema.yaml
configs/: default.yaml  experiment.yaml  paths.yaml  schema.yaml
data/interim/: .gitkeep
data/sample/: sample_100_rows.csv
docker/: entrypoint.sh
docs/: mkdocs.yml
docs/docs/: index.md
experiments/exp-001-smoking-trends/: DATA_CARD.md  MODEL_CARD.md  README.md  experiment.yml
notebooks/: 0.1-eda-feature-eng--20251101--CF.ipynb  0.1-eda.ipynb  01_data_cleaning.ipynb  02_ml_baseline.ipynb  03_dl_model.ipynb  eda.ipynb  exp-001-smoking-trends.ipynb  exp-002-smoking-trends.ipynb
notebooks/data/interim/: 20250831-010230_clean.csv
scripts/: clean.py  sample.py  smoke_flow.sh
src/addiction/: __init__.py
src/addiction/data/: ingest.py  loaders.py  watch.py
src/addiction/features/: pipelines.py
src/addiction/models/: evaluate.py  predict.py  train.py
src/addiction/utilities/: config.py  io.py  logging.py
src/addiction_ds/: evaluation.py  io.py  ml_utils.py  train.py  validate.py
src/cig_drink/: __init__.py  config.py  io.py  preprocess.py  validate.py
test/: test_io_writes.py  test_validate_ok.py
tests/: test.io.py  test.pipelines.py  test_config.py  test_ingest.py  test_train_predict_evaluate.py  test_watch.py
