[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "addiction"
version = "0.0.1"
description = "A repository where we explore with models to find answers with Cigarettes and Drinking"
authors = [
  { name = "Christian Fullerton" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["addiction"]
include = ["pyproject.toml", "addiction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["addiction"]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.12"
strict = false

[[tool.mypy.overrides]]
module = ["loguru", "typer", "tqdm"]
ignore_missing_imports = true

